--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "@contentful/rich-text-react-renderer": "^15.17.1",
+    "@fontsource/roboto": "^5.0.8",
+    "classnames": "^2.3.2",
+    "contentful": "^10.4.2",
     "leaflet": "^1.9.4",
     "next": "13.4.7",
     "react": "18.2.0",
@@ -21,10 +20,27 @@
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "sass": "^1.63.6",
-    "typescript": "5.1.3"
+    "tss-react": "^4.9.0",
+    "typescript": "*"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "@types/node": "20.3.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.2"
   },
   "browserslist": [
     ">0.2%",
