--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.1",
     "@fontsource/roboto": "^5.0.8",
+    "@react-hook/resize-observer": "^1.2.6",
     "classnames": "^2.3.2",
     "contentful": "^10.4.2",
     "leaflet": "^1.9.4",
