--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.1",
+    "@contentful/rich-text-types": "^16.2.1",
     "@fontsource/roboto": "^5.0.8",
     "@react-hook/resize-observer": "^1.2.6",
     "classnames": "^2.3.2",
